# CathosEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  vcpkg.json
Data/Engine/Shaders/PBR/: frag.spv  vert.spv
Data/Meshes/: sphere.glb
Data/Shaders/PBR/: frag.spv  vert.spv
MapEditor/: MapWorld.cpp  MapWorld.h
MapEditor/Windows/: HeightmapEditor.cpp  HeightmapEditor.h  Menus.cpp  Menus.h  WindowBase.cpp  WindowBase.h
Scripts/: CompileShaders.sh
ShadersGLSL/PBR/: shader.frag  shader.vert
Source/: main.cpp
Source/Engine/: Engine.cpp  Engine.h  Frontend.cpp  Frontend.h  InputManager.cpp  InputManager.h  SDLLayer.cpp  SDLLayer.h  TaskScheduler.cpp  TaskScheduler.h  World.cpp  World.h
Source/Engine/AI/Grid/: GridSystem.cpp  GridSystem.h
Source/Engine/Callme/: CallMe.h
Source/Engine/Components/: Color.h  Movement.h  SpatialData.h  Transform.h  Unit.h  Visibility.h
Source/Engine/Debug/: DebugSystem.cpp  DebugSystem.h
Source/Engine/Game/: Camera.cpp  Camera.h  CommandProcessor.cpp  CommandProcessor.h  Player.cpp  Player.h
Source/Engine/Map/: MapFormat.h
Source/Engine/Map/SpatialPartition/: GridSystem.cpp  GridSystem.h
Source/Engine/Math/: FixedMath.hpp  Math.h  Matrices.h  Quaternions.h  TransformMath.hpp  TransformSystem.h  Vectors.h
Source/Engine/Netcode/: ClientTransport.cpp  ClientTransport.h  Connection.h  ConnectionStatus.h  Message.cpp  Message.h  MessageReliability.h  NetCallbacks.h  NetworkManager.cpp  NetworkManager.h  NetworkTransport.cpp  NetworkTransport.h  ServerTransport.cpp  ServerTransport.h
Source/Engine/Registry/: CommandBuffer.h  Factories.cpp  Factories.h  Registry.cpp  Registry.h
Source/Engine/Rendering/: BindingDefinitions.h  DescriptorRegistry.h  Frame.cpp  Frame.h  PushConstant.h  RenderingSystem.cpp  RenderingSystem.h  Texture.h  VkContext.h  VkData.h
Source/Engine/Rendering/Pipelines/: PBRPipeline.cpp  PBRPipeline.h  RenderPipeline.cpp  RenderPipeline.h
Source/Engine/Resources/: AssetPath.h  AssetServer.h  Assets.h  MaterialMesh3D.h  Model.h  ResourceCache.h  Texture.h
Source/Engine/Resources/SpatialPartition/: Grid.h  Sector.h
Source/Engine/Systems/: SceneSystem.h  SpatialPartitionSystem.cpp  SpatialPartitionSystem.h  SystemRegistry.cpp  SystemRegistry.h  TransformSystem.cpp  TransformSystem.h
Source/Engine/Utilities/: FileHelper.cpp  FileHelper.h  FloatUtility.h  Hash.h  MapImporter.cpp  MapImporter.h  ModelImporter.cpp  ModelImporter.h  SceneUtilities.h  TextureImporter.cpp  TextureImporter.h
